--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "flowclock",
-  "version": "1.0.0",
-  "description": "",
-  "main": "api.js",
-  "scripts": {
-    "api": "node api.js",
-    "build": "webpack",
-    "client": "webpack-dev-server --port 4000",
-    "start": "nf start"
-  },
+  "name": "elm-webpack-starter",
+  "description": "Webpack setup for writing Elm apps",
+  "version": "0.8.6",
+  "license": "MIT",
+  "author": "Peter Morawiec",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Grrandi/flowclock.git"
+    "url": "https://github.com/moarwick/elm-webpack-starter"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Grrandi/flowclock/issues"
+  "scripts": {
+    "start": "webpack-dev-server --hot --inline",
+    "prebuild": "rimraf dist",
+    "build": "webpack",
+    "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install"
   },
-  "homepage": "https://github.com/Grrandi/flowclock#readme",
-  "dependencies": {
-    "ace-css": "^1.1.0",
-    "css-loader": "^0.28.4",
-    "elm-webpack-loader": "^4.3.1",
-    "file-loader": "^0.11.2",
-    "font-awesome": "^4.7.0",
-    "foreman": "^2.0.0",
-    "json-server": "^0.9.5",
-    "style-loader": "^0.18.2",
+  "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "bootstrap-sass": "^3.3.7",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.27.3",
+    "elm": "^0.18.0",
+    "elm-webpack-loader": "^4.3.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
+    "node-sass": "^4.5.1",
+    "postcss-loader": "^1.3.3",
+    "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.16.0",
     "url-loader": "^0.5.8",
-    "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack": "^2.3.1",
+    "webpack-dev-server": "^2.4.2",
+    "webpack-merge": "^4.1.0"
   }
 }
