--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "type": "git",
     "url": "https://github.com/moarwick/elm-webpack-starter"
   },
+  "main": "api.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
+    "api": "node api.js",
+    "client": "webpack-dev-server --hot --inline",
+    "start": "nf start",
     "prebuild": "rimraf dist",
     "build": "webpack",
     "reinstall": "npm i rimraf && rimraf node_modules && npm uninstall -g elm && npm i -g elm && npm i && elm package install"
@@ -23,8 +26,10 @@
     "elm-webpack-loader": "^4.3.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
+    "foreman": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
+    "json-server": "^0.12.0",
     "node-sass": "^4.5.1",
     "postcss-loader": "^1.3.3",
     "rimraf": "^2.6.1",
@@ -34,5 +39,8 @@
     "webpack": "^2.3.1",
     "webpack-dev-server": "^2.4.2",
     "webpack-merge": "^4.1.0"
+  },
+  "dependencies": {
+    "json-server": "^0.12.0"
   }
 }
