--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "css-loader": "^0.27.3",
     "elm": "^0.18.0",
     "elm-webpack-loader": "^4.3.0",
+    "express": "^4.15.4",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "foreman": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "json-server": "^0.12.0",
+    "node-json-db": "^0.7.3",
     "node-sass": "^4.5.1",
     "postcss-loader": "^1.3.3",
     "rimraf": "^2.6.1",
